@@ -1,3 +1,5 @@
+* Cleanup String#escapeHTML and String#unescapeHTML as well as standardize capability check property values to reduce extraneous text. [jddalton]
+
 * Fix IE bug where String#replace sets regexp's lastIndex property. [jddalton]
 
 * Optimize Hash using the `expando` property to avoid costly Object.hasKey() lookups. [jddalton, kangax]
